# open-lpr-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-android.sh  build-ios.sh  build.sh  embed_model.py  export_models.py  test_onnx.py
.github/workflows/: release.yml
android/openlprsdk/: .gitignore  build.gradle
android/openlprsdk/src/main/cpp/: CMakeLists.txt  jni.cpp
android/openlprsdk/src/main/java/com/digitaldivas/openlprsdk/: OpenLprSdk.kt
include/: lpr.h  lpr_c.h  models.h
scripts/: export_models.py
src/: lpr.cpp  lpr_c.cpp
tests/: test.cpp  test.js  test.py
